--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ snake_gatcha/inventories.json
 extensions/__pycache__/automsg.cpython-311.pyc
 data/automsg.json
 data/tts_history.json
+data/w2v.model
